Bumped up all dependencies to support Java 11 and fix security vulnerabilities. Fixed compatibility issues with the latest Spring. Restored Netbeans configuration.