@@ -25,40 +25,40 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.7.0</version>
+					<version>3.8.0</version>
 					<configuration>
-						<source>9</source>
-						<target>9</target>
+						<source>11</source>
+						<target>11</target>
 						<jdkToolchain>
-							<version>9</version>
+							<version>11</version>
 						</jdkToolchain>
-						<release>9</release>
+						<release>11</release>
 					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.1.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>3.1.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.2.2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.1.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
-					<version>1.5.7.RELEASE</version>
+					<version>2.1.2.RELEASE</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -68,11 +68,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.20.1</version>
-					<configuration>
-						<!-- TODO: remove this workaround? -->
-						<argLine>--add-modules java.base</argLine>
-					</configuration>
+					<version>2.22.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -92,17 +88,17 @@
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.4.196</version>
+				<version>1.4.197</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.1.4</version>
+				<version>42.2.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>5.2.11.Final</version>
+				<version>5.4.0.Final</version>
 				<exclusions>
 					<exclusion>
 						<groupId>javax.el</groupId>
@@ -117,12 +113,12 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-jpamodelgen</artifactId>
-				<version>5.2.11.Final</version>
+				<version>5.4.0.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
-				<version>5.2.11.Final</version>
+				<version>5.4.0.Final</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.jboss.spec.javax.transaction</groupId>
@@ -133,22 +129,22 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
-				<version>5.0.0.RELEASE</version>
+				<version>5.1.4.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-aop</artifactId>
-				<version>5.0.0.RELEASE</version>
+				<version>5.1.4.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-jpa</artifactId>
-				<version>2.0.0.RELEASE</version>
+				<version>2.1.4.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security.oauth</groupId>
 				<artifactId>spring-security-oauth2</artifactId>
-				<version>2.2.0.RELEASE</version>
+				<version>2.3.4.RELEASE</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework.security</groupId>
@@ -167,18 +163,18 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot</artifactId>
-				<version>1.5.7.RELEASE</version>
+				<version>2.1.2.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-tomcat</artifactId>
-				<version>1.5.7.RELEASE</version>
+				<version>2.1.2.RELEASE</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
-				<version>1.5.7.RELEASE</version>
+				<version>2.1.2.RELEASE</version>
 				<exclusions>
 					<exclusion>
 						<groupId>javax.transaction</groupId>
@@ -189,28 +185,28 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-security</artifactId>
-				<version>1.5.7.RELEASE</version>
+				<version>2.1.2.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-actuator</artifactId>
-				<version>1.5.7.RELEASE</version>
+				<version>2.1.2.RELEASE</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.9.1</version>
+				<version>2.9.8</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
-				<version>1.3.3</version>
+				<version>1.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.8.11</version>
+				<version>1.9.2</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.servlet</groupId>
@@ -225,55 +221,25 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>2.3.0</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.xml</groupId>
-				<artifactId>jaxb-impl</artifactId>
-				<version>2.1</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.persistence</groupId>
-				<artifactId>javax.persistence-api</artifactId>
-				<version>2.2</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.annotation</groupId>
-				<artifactId>javax.annotation-api</artifactId>
-				<version>1.3.1</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
 				<groupId>javax.transaction</groupId>
 				<artifactId>javax.transaction-api</artifactId>
 				<version>1.2</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>javax.activation</groupId>
-				<artifactId>activation</artifactId>
-				<version>1.1.1</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-jasper</artifactId>
-				<version>8.5.20</version>
+				<version>9.0.14</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars</groupId>
 				<artifactId>webjars-locator</artifactId>
-				<version>0.32-1</version>
+				<version>0.34</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars</groupId>
 				<artifactId>webjars-locator-core</artifactId>
-				<version>0.33</version>
+				<version>0.36</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars</groupId>
@@ -283,22 +249,22 @@
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>angular</artifactId>
-				<version>1.6.6</version>
+				<version>1.7.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>angular-cookies</artifactId>
-				<version>1.6.6</version>
+				<version>1.7.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>angular-route</artifactId>
-				<version>1.6.6</version>
+				<version>1.7.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>jquery</artifactId>
-				<version>3.2.1</version>
+				<version>3.3.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
@@ -313,12 +279,12 @@
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>ngInfiniteScroll</artifactId>
-				<version>1.3.0</version>
+				<version>1.3.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>ng-tags-input</artifactId>
-				<version>3.1.1</version>
+				<version>3.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
@@ -328,7 +294,7 @@
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>nvd3</artifactId>
-				<version>1.8.5</version>
+				<version>1.8.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.bower</groupId>
@@ -344,12 +310,12 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
-				<version>1.5.7.RELEASE</version>
+				<version>2.1.2.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.5.3</version>
+				<version>4.5.6</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
